added contact information (robot unfriendly)
Signed-off-by: Manohar Vanga <manohar.vanga@gmail.com>

--- a/README
+++ b/README
@@ -1,2 +1,3 @@
 Self-describing Wishbone Specification
 Author: Manohar Vanga
+Email: manohar dot vanga at organization-with-worlds-biggest-particle-collider dot com
