--- a/sdwb.tex
+++ b/sdwb.tex
@@ -7,6 +7,7 @@
 \usepackage{array}
 \usepackage{multirow}
 \usepackage{footnote}
+\usepackage{graphicx}
 
 \usepackage{caption}
 \DeclareCaptionFont{white}{\color{white}}
@@ -28,10 +29,14 @@
 
 \maketitle
 
-This document describes the specification for the self describing Wishbone
-bus.
+\tableofcontents
+
+\pagebreak
 
 \section{Introduction}
+
+This document describes the specification for the self describing Wishbone
+bus.
 
 It is advantageous from a software standpoint to have Wishbone peripherals
 that can be probed automatically. This allows for a clean design of operating
@@ -39,6 +44,8 @@ system drivers.
 
 This specification introduces a standard that allows the Wishbone bus to be
 probed easily.
+
+\pagebreak
 
 \section{Specification}
 
@@ -294,5 +301,21 @@ The ASCII string representation of the device name. The string should be
 terminated with the ASCII value 0, thus allowing for a maximum of 15
 characters.
 \end{description}
+
+\section{Example Memory Map}
+
+Figure \ref{fig:wbmap} illustrates the
+structure of the Wishbone memory map for a bitstream containing three Wishbone
+devices. There is a single header block that has the addresses of the other
+block. There is a single ID block containing metadata regarding the bitstream
+along with a single device descriptor block containing descriptors for the three
+devices present in the bitstream.
+
+\begin{figure}[!ht]
+	\centering
+	\includegraphics{wbmap.eps}
+	\caption{Example memory map of a Self-Describing Wishbone bus}
+	\label{fig:wbmap}
+\end{figure}
 
 \end{document}
