Added list of figures and tables
Signed-off-by: Manohar Vanga <manohar.vanga@gmail.com>

--- a/sdwb.tex
+++ b/sdwb.tex
@@ -30,6 +30,8 @@
 \maketitle
 
 \tableofcontents
+\listoftables
+\listoffigures
 
 \pagebreak
 
@@ -307,7 +309,7 @@ characters.
 Figure \ref{fig:wbmap} illustrates the
 structure of the Wishbone memory map for a bitstream containing three Wishbone
 devices. There is a single header block that has the addresses of the other
-block. There is a single ID block containing metadata regarding the bitstream
+blocks. There is a single ID block containing metadata regarding the bitstream
 along with a single device descriptor block containing descriptors for the three
 devices present in the bitstream.
 
