--- a/sdwb.tex
+++ b/sdwb.tex
@@ -79,11 +79,11 @@ bus width (eg. 2 reads on a 32 bit data bus).
 The Wishbone header contains the locations of the device descriptor block and 
 ID block in the Wishbone address space.
 
-The header block can be placed anywhere within the Wishbone address space
-as long as there is some way for the operating system to find its location.
-It is recommended that the address of the header be placed into the memory
-of the parent bus. For example, a BAR can be used in the case of PCI,
-the CR/CSR space in the case of VME and the \emph{config} space in the case
+The header block can be placed at any location within the Wishbone address space
+as long as the bus controller knows the location (eg. a constant in HDL).
+It is recommended that the address of the header be placed into memory
+within the parent bus. For example, a BAR can be used in the case of PCI,
+the CR/CSR space in the case of VME and the configuration space in the case
 of Etherbone.
 
 The structure of the header block is described in Table \ref{hdr_block_struct}.
@@ -92,7 +92,7 @@ The structure of the header block is described in Table \ref{hdr_block_struct}.
 	\begin{savenotes}
 	\begin{table}[!ht]\footnotesize
 	\caption{Wishbone header block structure}\label{hdr_block_struct}\centering
-	\begin{tabular}{| c | c | c | c | c | p{5cm} |} \hline
+	\begin{tabular}{| c | c | l | c | c | p{5cm} |} \hline
 	Offset & Size (in bytes) & Name & Access & Value & Description \\ \hline
 	0x00 & 0x08 & MAGIC & RO & 0x5344574248454144LL & Magic number used to ensure that there is a valid header present. \\ \hline
 	0x08 & 0x08 & WBIDB\_ADDR & RO & - & Address of the Wishbone ID block. See section \ref{id_block} for more information. \\ \hline
@@ -114,15 +114,13 @@ terminator.
 
 \item[WBIDB\_ADDR (Offset: 0x08)] \hfill \\
 This field contains the address of the Wishbone ID block (see Section \ref{id_block}
-for more information). The address width can be anything less than or equal
-to 64 bits. The software reading this field should know what address width to
-expect.
+for more information). The software reading this field should know what address width
+to expect.
 
 \item[WBDDB\_ADDR (Offset: 0x10)] \hfill \\
 This field contains the address of the device descriptor block (see Section
-\ref{device_block} for more information). The address width can be anything
-less than or equal to 64 bits. The software reading this field should know
-what address width to expect.
+\ref{device_block} for more information). The software reading this field should
+know what address width to expect.
 \end{description}
 
 \subsection{ID Block}\label{id_block}
@@ -140,26 +138,26 @@ The structure of the ID block is described in Table \ref{id_block_struct}.
 	\begin{savenotes}
 	\begin{table}[!ht]\footnotesize
 	\caption{Wishbone ID block structure}\label{id_block_struct}\centering
-	\begin{tabular}{| l | c | c | c | c | p{5cm} |} \hline
+	\begin{tabular}{| l | c | l | c | c | p{5cm} |} \hline
 	Offset & Size (in bytes) & Name & Access & Value & Description \\ \hline
-	0x00 & 0x08 & BSTREAM\_TYPE & RO & - & The bitstream type identifier. \\ \hline
+	0x00 & 0x08 & BSTREAM\_DEVTYPE & RO & - & The bitstream type identifier. \\ \hline
 	0x08 & 0x04 & BSTREAM\_VERSION & RO & - & The version of the specific bitstream. \\ \hline
 	0x0C & 0x04 & BSTREAM\_DATE & RO & - & The synthesis date of the bitstream. \\ \hline
-	0x10 & 0x10 & BSTREAM\_RELEASE & RO & - & The SVN revision number or the SHA-1 hash of the Git release (first 16 bytes). \\ \hline
+	0x10 & 0x10 & BSTREAM\_SOURCE & RO & 0x0 & The SVN revision number or the SHA-1 hash of the Git release (first 16 bytes). \\ \hline
 	\end{tabular}
 	\end{table}
 	\end{savenotes}
 \end{center}
 
 \begin{description}
-\item[BSTREAM\_TYPE (Offset: 0x00)] \hfill \\
-The bitstream type should hold a value that uniquely identifies the type of 
+\item[BSTREAM\_DEVTYPE (Offset: 0x00)] \hfill \\
+The bitstream device type should hold a value that uniquely identifies the type of 
 bitstream present in the FPGA. Note that different bitstreams can have the
 same type with differing versions (see below).
 
 \item[BSTREAM\_VERSION (Offset: 0x08)] \hfill \\
 The bitstream version should hold a value that specifies the version of the
-bitstream present in the FPGA. This field along with the BSTREAM\_TYPE field,
+bitstream present in the FPGA. This field along with the BSTREAM\_DEVTYPE field,
 should uniquely identify a specific bitstream.
 
 \item[BSTREAM\_DATE (Offset: 0x0C)] \hfill \\
@@ -167,14 +165,14 @@ The bitstream date should be set to the hex-readable date of synthesis of
 the bitstream. An example of a hex-readable date is 0x20111225 (25th December
 2011).
 
-\item[BSTREAM\_RELEASE (Offset: 0x10)] \hfill \\
+\item[BSTREAM\_SOURCE (Offset: 0x10)] \hfill \\
 This field should specify an identifier for the revision control software
 used to manage the HDL code for the bitstream type. This allows for the 
 possibility of automatic checking out and loading of bitstreams.
 
 In the case of SVN repositories, the value of the revision number should
 be stored in this field. For example, if the SVN revision is 1024, the 
-stored value should be 0x00000000000000000400.
+stored value should be 0x400.
 
 In the case of Git repositories, the first 16 bytes (0x10 bytes) of the
 160 bit (20 bytes, 0x14 bytes) value of the commit hash should be stored
@@ -192,7 +190,7 @@ a structure as described in Table \ref{dev_desc_struct}.
 	\begin{savenotes}
 	\begin{table}[!ht]\footnotesize
 	\caption{Wishbone device descriptor structure}\label{dev_desc_struct}\centering
-	\begin{tabular}{| l | c | c | c | c | p{5cm} |} \hline
+	\begin{tabular}{| l | c | l | c | c | p{5cm} |} \hline
 	Offset & Size (in bytes) & Name & Access & Value & Description \\ \hline
 	0x00 & 0x08 & VENDOR & RO & - & The vendor ID of the vendor of the Wishbone device. \\ \hline
 	0x08 & 0x04 & DEVICE & RO & - & The device ID of the Wishbone device. \\ \hline
@@ -201,7 +199,7 @@ a structure as described in Table \ref{dev_desc_struct}.
 	0x0F & 0x01 & WBD\_VER\_MINOR & RO & - & The minor version of the descriptor format. \\ \hline
 	0x10 & 0x08 & HDL\_BASE & RO & - & Base address (Wishbone) of the Wishbone device. \\ \hline
 	0x18 & 0x08 & HDL\_SIZE & RO & - & Size (in bytes) of the device address space. \\ \hline
-	0x20 & 0x04 & WBD\_FLAGS & RO & - & Device flags. \\ \hline
+	0x20 & 0x04 & WBD\_FLAGS & RO & 0x0 & Device flags. \\ \hline
 	0x24 & 0x04 & HDL\_CLASS & RO & - & HDL class. \\ \hline
 	0x28 & 0x04 & HDL\_VERSION & RO & - & HDL version. \\ \hline
 	0x2C & 0x04 & HDL\_DATE & RO & - & HDL generation date. \\ \hline
@@ -245,14 +243,12 @@ structure is preserved. An example of a minor version change is the addition
 of a new flag in the WBD\_FLAGS field.
 
 \item[HDL\_BASE (Offset: 0x10)] \hfill \\
-This field contains the base address of the Wishbone device. The address width
-can be anything less than or equal to 64 bits. The software reading this
-field should know what address width to expect.
+This field contains the base address of the Wishbone device.
+The software reading this field should know what address width to expect.
 
 \item[HDL\_SIZE (Offset: 0x18)] \hfill \\
-This field contains the size of the address space of this device. The address width
-can be anything less than or equal to 64 bits. The software reading this
-field should know what address width to expect.
+This field contains the size of the address space of this device.
+The software reading this field should know what address width to expect.
 
 \item[WBD\_FLAGS (Offset: 0x20)] \hfill \\
 Currently undefined.
@@ -276,21 +272,23 @@ December 2011).
 
 \item[VENDOR\_NAME (Offset: 0x30)] \hfill \\
 The ASCII string representation of the vendor name. The unused bytes of the
-string should be set to the value 0.
+string should be set to the value 0x20. The length of the ASCII string can range
+up to the maximum size (16 characters).
 
 \item[DEVICE\_NAME (Offset: 0x40)] \hfill \\
 The ASCII string representation of the device name. The unused bytes of the
-string should be set to the value 0.
+string should be set to the value 0x20. The length of the ASCII string can range
+up to the maximum size (16 characters).
 \end{description}
 
 \subsubsection{Note on Vendor IDs}
 The vendor ID values are taken from a 64 bit address space.
 This space is divided into two sections; \emph{reserved} and \emph{free}.
 
-The \emph{reserved} vendor space includes all vendor values with the highest 
-bit unset (0x0000000000000000 - 0x8FFFFFFFFFFFFFFF).
+The \emph{reserved} vendor space includes all values with the highest 
+bit unset (0x0000000000000000 - 0x7FFFFFFFFFFFFFFF).
 
-The \emph{free} vendor space includes all vendor values with the highest 
+The \emph{free} vendor space includes all values with the highest 
 bit set (0x8000000000000000 - 0xFFFFFFFFFFFFFFFF).
 
 Vendors are free to choose any value within the free space. There is no
@@ -304,9 +302,9 @@ specification.
 
 It is recommended that the vendor ID be chosen using an established 
 hashing algorithm by feeding it uniquely identifying fields. The
-recommended fields to use are the vendor name string, a 128 bit random
-seed and a timestamp. It is recommended to use the MD5 hash of these
-fields and take the 8 least significant bytes from the resulting hash.
+recommended fields to use are the vendor name string and a 128 bit random
+seed. It is recommended to use the MD5 hash of these fields and take the
+8 least significant bytes from the resulting hash.
 
 
 \section{Example Memory Map}
