--- a/README
+++ b/README
@@ -1,3 +1,9 @@
 Self-describing Wishbone Specification
 Author: Manohar Vanga
-Email: manohar dot vanga at organization-with-worlds-biggest-particle-collider dot com
+Email: manohar dot vanga at organization-with-worlds-biggest-particle-collider dot ch
+
+This folder contains the specification document for the self-describing
+wishbone bus.
+
+The 'simulation' folder contains the driver and example simulation of a
+wishbone bus.
