add Alessandro's name to specification doc
Signed-off-by: Manohar Vanga <manohar.vanga@cern.ch>

--- a/sdwb.tex
+++ b/sdwb.tex
@@ -24,7 +24,7 @@
 \makesavenoteenv{tabular}
 
 \title{Self Describing Wishbone Bus Specification}
-\author{Manohar Vanga (BE/CO/HT)}
+\author{Manohar Vanga (BE/CO/HT), Alessandro Rubini (University of Pavia)}
 \date{22 June 2011}
 \begin{document}
 
